fix(post) : fix alignement

--- a/src/app/post/components/post-list/post-list.component.scss
+++ b/src/app/post/components/post-list/post-list.component.scss
@@ -5,9 +5,13 @@
 
 .section-container {
   background: $grey-6;
+  margin-top: 40px;
   .row-border {
     border-bottom: 1px dashed $grey-4;
-    margin: 16px 0;
+    padding-bottom: 16px;
+    &.otherNews {
+      padding-top: 24px;
+    }
   }
   h2 {
     font-style: italic !important;
@@ -30,6 +34,7 @@
     }
     @include cn-bold-28;
     color: $grey-2;
+    margin: 0;
   }
   .columnPosts {
     @media #{$large-phone} {
@@ -70,9 +75,9 @@
     border-radius: 6px;
     .project-content {
       @media #{$large-phone} {
-        padding: 10px 32px 0px 36px;
+        padding: 38px 32px 14px 36px;
       }
-      padding: 18px 32px 26px 36px;
+      padding: 39px 32px 26px 36px;
       fill: $secondary-color;
       stroke: $secondary-color;
       &.mobile {
